Fixed navbar title too narrow #596

--- a/resources/sass/navs/_sidebar.scss
+++ b/resources/sass/navs/_sidebar.scss
@@ -60,7 +60,6 @@
             }
         }
         &-text {
-            width: 65px;
             font-size: 0.95rem;
             text-align: left;
             line-height: 1.125rem;
